# github-wiki-see-rs-sitemaps

./: LICENSE  README.md  base_sitemap.xml  pyproject.toml
.github/workflows/: build_and_ping.yml
base/: sitemap_index.xml
generator/: generate.py  generate_seed_sitemaps.py  generate_upto_may_2021_seed_sitemaps.py  generate_upto_seed_sitemaps.py  generate_upto_seed_sitemaps_wiki_index.py  pump_head_check.py
seed_sitemaps/: github-wiki-see.show.touched_wiki_pages_202105_1.xml  index.xml
