[tool.poetry]
name = "github-wiki-see-rs-sitemaps"
version = "0.1.0"
description = ""
authors = ["Nelson Chen <crazysim@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.*"
google-cloud-bigquery = "^2.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
